--- a/scripts/dedalus.cfg
+++ b/scripts/dedalus.cfg
@@ -5,11 +5,9 @@
 # Dedalus will examine the following locations for configuration files,
 # from lowest to highest precedence:
 #
-#   1) The default in-package location:     dedalus/defaults.cfg
+#   1) The default in-package location:     dedalus/dedalus.cfg
 #   2) Your home directory:                 ~/.dedalus/dedalus.cfg
 #   3) The current working directory:       ./dedalus.cfg
-#
-# Note the expected filenames.
 #
 
 [logging]
@@ -22,7 +20,7 @@
 
     # Log level for stdout handler
     # Use 'none' to specify no streamhandler
-    stdout_level = debug
+    stdout_level = info
 
     # Log level for file handler
     # Use 'none' to specify no filehandler
@@ -85,3 +83,15 @@
 
     # Preallocate output fields for all operators
     PREALLOCATE_OUTPUTS = False
+
+[analysis]
+
+    # Default filehandler mode (overwrite, append)
+    FILEHANDLER_MODE_DEFAULT = overwrite
+
+    # Default filehandler parallel setting
+    FILEHANDLER_PARALLEL_DEFAULT = False
+
+    # Force filehandlers to touch a tmp file on each node.
+    # This works around NFS caching issues
+    FILEHANDLER_TOUCH_TMPFILE = True
